--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@jsonic/hoover",
   "version": "0.0.1",
-  "description": "This plugin allows the [Jsonic](https://jsonic.senecajs.org) JSON parser to support a core subset of hoover syntax.",
+  "description": "This plugin allows the [Jsonic](https://jsonic.senecajs.org) JSON parser to support string hoovering (unquoted internal spaces).",
   "main": "hoover.js",
   "type": "commonjs",
   "browser": "hoover.min.js",
@@ -40,16 +40,17 @@
     "LICENSE"
   ],
   "devDependencies": {
-    "@types/jest": "^27.0.2",
+    "@jsonic/jsonic-next": ">=2.7.0",
+    "@types/jest": "^29.4.0",
     "browserify": "^17.0.0",
-    "esbuild": "^0.13.9",
-    "esbuild-jest": "^0.5.0",
-    "jest": "^27.3.1",
-    "jsonic": "github:jsonicjs/jsonic#nextgen",
-    "prettier": "^2.4.1",
-    "tinyify": "^3.0.0",
-    "ts-jest": "^27.0.7",
-    "typescript": "^4.4.4"
+    "es-jest": "^2.1.0",
+    "esbuild": "^0.17.7",
+    "jest": "^29.4.2",
+    "prettier": "^2.8.4",
+    "tinyify": "^4.0.0",
+    "typescript": "^4.9.5"
   },
-  "dependencies": {}
+  "peerDependencies": {
+    "@jsonic/jsonic-next": ">=2.7.0"
+  }
 }
