--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jsonic/hoover",
-  "version": "0.0.1",
+  "version": "0.1.1",
   "description": "This plugin allows the [Jsonic](https://jsonic.senecajs.org) JSON parser to support string hoovering (unquoted internal spaces).",
   "main": "hoover.js",
   "type": "commonjs",
@@ -30,7 +30,7 @@
     "reset": "npm run clean && npm i && npm test",
     "repo-tag": "REPO_VERSION=`node -e \"console.log(require('./package').version)\"` && echo TAG: v$REPO_VERSION && git commit -a -m v$REPO_VERSION && git push && git tag v$REPO_VERSION && git push --tags;",
     "repo-publish": "npm run clean && npm i && npm run repo-publish-quick",
-    "repo-publish-quick": "npm run prettier && npm run build && npm run test && npm run test-web && npm run repo-tag && npm publish --registry http://registry.npmjs.org "
+    "repo-publish-quick": "npm run prettier && npm run build && npm run test && npm run repo-tag && npm publish --registry https://registry.npmjs.org "
   },
   "license": "MIT",
   "files": [
@@ -44,8 +44,8 @@
     "@types/jest": "^29.4.0",
     "browserify": "^17.0.0",
     "es-jest": "^2.1.0",
-    "esbuild": "^0.17.7",
-    "jest": "^29.4.2",
+    "esbuild": "^0.17.8",
+    "jest": "^29.4.3",
     "prettier": "^2.8.4",
     "tinyify": "^4.0.0",
     "typescript": "^4.9.5"
