--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jsonic/hoover",
-  "version": "0.5.0",
+  "version": "0.7.0",
   "description": "This plugin allows the [Jsonic](https://jsonic.senecajs.org) JSON parser to support string hoovering (unquoted internal spaces).",
   "main": "hoover.js",
   "type": "commonjs",
@@ -25,7 +25,7 @@
     "test-watch": "jest --coverage --watchAll",
     "watch": "tsc -w -d",
     "doc": "jsonic-doc",
-    "build": "tsc -d && cp hoover.js hoover.min.js && browserify -o hoover.min.js -e hoover.js -s @JsonicHoover -im -i assert -p tinyify",
+    "build": "tsc -d",
     "prettier": "prettier --write --no-semi --single-quote *.ts test/*.js",
     "clean": "rm -rf node_modules yarn.lock package-lock.json",
     "reset": "npm run clean && npm i && npm run build && npm test",
@@ -42,17 +42,14 @@
   ],
   "devDependencies": {
     "@jsonic/doc": "^0.0.9",
-    "@jsonic/jsonic-next": ">=2.14.0",
     "@types/jest": "^29.5.14",
-    "browserify": "^17.0.1",
     "es-jest": "^2.1.0",
     "esbuild": "^0.24.0",
     "jest": "^29.7.0",
     "prettier": "^3.3.3",
-    "tinyify": "^4.0.0",
     "typescript": "^5.6.3"
   },
   "peerDependencies": {
-    "@jsonic/jsonic-next": ">=2.14.0"
+    "jsonic": ">=2.15.2"
   }
 }
